--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "dev": "ts-node src/index.ts",
+    "dev:large": "ts-node scripts/test-large-scale.ts",
+    "generate:large": "ts-node scripts/generate-large-scale-data.ts",
     "lint": "eslint src --ext .ts"
   },
   "keywords": [
